# kortecx-app

./: .gitignore  .prettierignore  Makefile  README.md  dev-app-update.yml  docker-compose.yml  electron-builder.yml  electron.vite.config.ts  index.html  kx_start.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: Dockerfile  README.md  main.py  pyproject.toml  start
electron/main/: index.ts
resources/: icon.icns
scripts/: kx_start.sh
src/: App.tsx  HomePage.tsx  main.tsx  routeTree.gen.ts  router.tsx  vite-env.d.ts
src/components/: ContentArea.tsx  Dashboard.tsx  Dots.tsx  Navbar.tsx  Notebook.tsx  Welcome.tsx  Workflow.tsx
src/main/: index.ts
src/pages/: HomePage.tsx  Test.tsx  dashboard.tsx
src/renderer/: index.html
src/renderer/src/: App.svelte
src/renderer/src/assets/: main.css
src/renderer/src/routes/mainpage/: +page.svelte
src/routes/: __root.tsx  about.tsx  homepage.tsx  index.tsx
src/types/: electron.d.ts
