[project]
name = "backend"
version = "0.1.0"
description = "KortecX backend library"
author = "Jay Reddy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "fastapi-pagination>=0.15.6",
    "ollama>=0.6.1",
    "torch>=2.9.1",
    "transformers>=4.57.5",
    "uvicorn>=0.40.0",
]
